{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 51,
  "lineage": "ceb0c8b5-32df-d599-10ca-3c4eb1325896",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Web01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b6c6ebed2801a5cb",
            "arn": "arn:aws:ec2:us-east-1:159277366603:instance/i-0abbcd40216a74bfd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0abbcd40216a74bfd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Ikey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-048346a56ccf4bddd"
              }
            ],
            "primary_network_interface_id": "eni-048346a56ccf4bddd",
            "private_dns": "ip-172-100-1-228.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.100.1.228",
            "public_ip": "98.88.25.172",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04a0c6970dd010e6a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-000904410462b2661"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a9dba3f0fb110d93",
            "tags": {
              "Name": "Web01"
            },
            "tags_all": {
              "Name": "Web01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-000904410462b2661"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "159277366603",
            "id": "i-0abbcd40216a74bfd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.SG01",
            "aws_subnet.pub-sub01",
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159277366603:internet-gateway/igw-0d3eb8b50422a75e7",
            "id": "igw-0d3eb8b50422a75e7",
            "owner_id": "159277366603",
            "region": "us-east-1",
            "tags": {
              "Name": "Web01-gw01"
            },
            "tags_all": {
              "Name": "Web01-gw01"
            },
            "vpc_id": "vpc-09bcf1537d3156f09"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159277366603:route-table/rtb-0f67138a34e819f79",
            "id": "rtb-0f67138a34e819f79",
            "owner_id": "159277366603",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d3eb8b50422a75e7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Web01-RT-01"
            },
            "tags_all": {
              "Name": "Web01-RT-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-09bcf1537d3156f09"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "159277366603",
            "id": "rtb-0f67138a34e819f79",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-sub-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d6ff99c692c4a2f",
            "region": "us-east-1",
            "route_table_id": "rtb-0f67138a34e819f79",
            "subnet_id": "subnet-0a9dba3f0fb110d93"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt-01",
            "aws_subnet.pub-sub01",
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159277366603:security-group/sg-000904410462b2661",
            "description": "Ingress and egress rules defined..",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000904410462b2661",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.100.0.0/16",
                  "49.47.219.226/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20260308104052117700000001",
            "name_prefix": "terraform-",
            "owner_id": "159277366603",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-01"
            },
            "tags_all": {
              "Name": "SG-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-09bcf1537d3156f09"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "159277366603",
            "id": "sg-000904410462b2661",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri-sub01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159277366603:subnet/subnet-0b1df86d164829694",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.100.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1df86d164829694",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "159277366603",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Private-sub01"
            },
            "tags_all": {
              "Name": "Private-sub01"
            },
            "vpc_id": "vpc-09bcf1537d3156f09"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "159277366603",
            "id": "subnet-0b1df86d164829694",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159277366603:subnet/subnet-0a9dba3f0fb110d93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.100.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9dba3f0fb110d93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "159277366603",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Managed_by": "terraform",
              "Name": "Public-sub01"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "Public-sub01"
            },
            "vpc_id": "vpc-09bcf1537d3156f09"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "159277366603",
            "id": "subnet-0a9dba3f0fb110d93",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159277366603:vpc/vpc-09bcf1537d3156f09",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.100.0.0/16",
            "default_network_acl_id": "acl-0f34043914d7b9e57",
            "default_route_table_id": "rtb-0c82562f8256996dd",
            "default_security_group_id": "sg-039f6efd36db63bc4",
            "dhcp_options_id": "dopt-04a35ba3b2ec478a4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09bcf1537d3156f09",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c82562f8256996dd",
            "owner_id": "159277366603",
            "region": "us-east-1",
            "tags": {
              "Managed_by": "terraform",
              "Name": "Web01-VPC01"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "Web01-VPC01"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "159277366603",
            "id": "vpc-09bcf1537d3156f09",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}